--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,7 @@ rules:
     block-scoped-var: 2
     brace-style: [0, '1tbs']
     camelcase: 1
-    comma-dangle: [2, 'never']
+    comma-dangle: [0]
     comma-spacing: [2, {before: false, after: true}]
     comma-style: [2, 'last']
     complexity: [1, 11]
