--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "stylus"
   ],
   "scripts": {
-    "start": "gulp --debug",
+    "start": "gulp --inspect",
     "build": "gulp build",
     "production": "cross-env NODE_ENV=production npm-run-all clean build",
     "make-block": "babel-node make-block.js",
@@ -80,6 +80,7 @@
     "gulp-filter": "^3.0.1",
     "gulp-gh-pages": "^0.5.4",
     "gulp-group-css-media-queries": "^1.1.0",
+    "gulp-html-beautify": "^1.0.1",
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^6.0.0",
     "gulp-jsbeautifier": "^1.0.1",
